# MIKEINTOSH_ChatGPT_WebApp

./: .htaccess  README.md  config.json  passenger_wsgi.py  pyproject.toml  replit_zip_error_log.txt  test.php
client/html/: index.html
client/js/: chat.js
