[tool.poetry]
name = "repl_nix_freegpt-webui"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyExecJS = "^1.5.1"
requests = "^2.31.0"
aiohttp = "^3.8.4"
browser-cookie3 = "^0.19.1"
certifi = "^2023.5.7"
Flask = "^2.3.2"
googletrans = "^3.0.0"
pycryptodome = "^3.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
